--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,15 +1,22 @@
 <!doctype html>
-<html lang="en" class="custom-theme">
+<html class="custom-theme" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Client</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <link href="favicon.ico" rel="icon" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+  <div id="initial_splash">
+    <div class="flex items-center justify-center h-screen">
+      <div class="flex-col items-center align-middle">
+        <img alt="logo" class="w-32 h-32" src="../images/logo.png"/>
+      </div>
+    </div>
+  </div>
   <app-root></app-root>
 </body>
 </html>
